Fixed alignment of profile image preview

--- a/app/assets/stylesheets/pages/edit-profile-avatar-section.scss
+++ b/app/assets/stylesheets/pages/edit-profile-avatar-section.scss
@@ -31,7 +31,7 @@
             height: 80px;
             width: 80px;
             flex: 0 0 80px;
-            margin:5px 20px 5px 0;
+            margin:0px 20px 5px 0;
             border-radius: 2px;
 
             background-position: center;
